<resources>
    <string name="app_name">SignUpForm</string>
    <string name="username_hint">Please enter your username</string>
    <string name="username_label">Username:</string>
    <string name="submit_button">Submit</string>
    <string name="password_hint">Please enter your password</string>
    <string name="password_label">Password:</string>
    <string name="confirm_hint">Please confirm your password</string>
    <string name="confirm_label">Confirm:</string>
    <string name="welcome">Welcome %1$s!</string>
</resources>
