<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chiutsui.signupform.LoginActivity">

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/username_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/username_label" />

            <EditText
                android:id="@+id/username_field"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/password_field"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password_label" />

            <EditText
                android:id="@+id/password_field"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/confirm_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_label" />

            <EditText
                android:id="@+id/confirm_field"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_hint" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/form"
        android:layout_below="@id/form"
        android:text="@string/submit_button" />
</RelativeLayout>
